# db-monitor

./: .gitignore  README.md  app.spec  config.template.json  mypy.ini  pyproject.toml  requirements.txt
assets/: config.template.json
assets/sql/: cl_replication_log.sql  etl_status.sql  job_errors.sql  job_result.sql  job_status.sql  locks.sql  long_running_queries.sql  qry_log.sql  req_log.sql  row_counts.sql  sp_log.sql
data/: config.template.json
scripts/: build_exe.cmd  run_db_monitor.cmd
src/: main.py
src/adapter/: __init__.py  db.py  fs.py  json_config.py  sql_file.py
src/domain/: __init__.py  config.py  datasource.py  exceptions.py  job.py  report.py  worker.py
src/presentation/: __init__.py  dashboard.py  main_view.py  report_view.py  report_view_model.py
src/service/: __init__.py  report_scheduler.py  report_worker.py  report_worker_signals.py
tests/domain/: test_config.py  test_query.py
