[tool.poetry]
name = "db-monitor"
version = "0.1.0"
description = ""
authors = ["Mark Stefanovic <markstefanovic@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
pyodbc = "^4.0.30"
pyqt5 = "^5.15.2"
loguru = "^0.5.3"
pydantic = "^1.7.3"
qdarkgraystyle = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
